Fixed the floating sidebar on mobile devices

--- a/sunpy_sphinx_theme/sunpy/static/style.css
+++ b/sunpy_sphinx_theme/sunpy/static/style.css
@@ -184,6 +184,15 @@ footer {
 	.sunpy-logo {
    		width: 75%;
  	}
+ 	.bs-sidenav {
+ 		position: relative;
+ 		width: 100%
+ 	}
+}
+@media (max-width: 768px) {
+	.bs-sidenav {
+ 		position: relative;
+ 	}
 }
 @media (min-width: 768px) {
 	.container>.navbar-header, 
